# raytracer-c

./: CMakeLists.txt  README.md
src/: aabb.h  box.h  bvh_node.h  camera.h  constant_medium.h  dielectric.h  diffuse_light.h  flip_normals.h  hitable.h  hitable_list.h  instances.h  isotropic.h  lambertian.h  main.cpp  material.h  metal.h  perlin.h  ray.h  sphere.h  texture.h  vec3.h  xy_rect.h  xz_rect.h  yz_rect.h
